refactor(core): refactor sink